<resources>
    <string name="app_name">Chatter Box</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_fragment">CHATS FRAGMENT</string>
    <string name="contacts_fragment">Contacts_fragment</string>
    <!--    <string name="app_name">Residential Welfare Association</string>-->
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
</resources>
