<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.example.chatterbox.login_register.RegisterActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />



            <ImageView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/joinus_text" />


<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/atvUsernameReg"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:background="@drawable/rounded_rect"-->
<!--                android:drawableLeft="@drawable/icon_person"-->
<!--                android:drawablePadding="10dp"-->
<!--                android:drawableStart="@drawable/icon_person"-->
<!--                android:hint="@string/usernameReg"-->
<!--                android:paddingEnd="10dp"-->
<!--                android:paddingStart="10dp"-->
<!--                android:textColor="@color/white"-->
<!--                android:textColorHint="@color/black"-->
<!--                android:textSize="15sp" />-->


            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_mail"
                android:hint="@string/emailReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="15sp" />



            <AutoCompleteTextView
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="15sp" />


            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/already_have_account_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="@color/black" />



        </LinearLayout>



    </ScrollView>

</RelativeLayout>





<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".RegisterActivity"-->
<!--    >-->

<!--    <ImageView-->
<!--        android:id="@+id/register_image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp"-->
<!--    android:src="@drawable/signup_photo"-->
<!--    android:layout_alignParentTop="true"-->
<!--    android:layout_alignParentStart="true"-->
<!--    android:scaleType="fitCenter"-->
<!--    />-->

<!--    <EditText-->
<!--        android:id="@+id/register_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/register_image"-->
<!--        android:hint="Email..."-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:background="@drawable/inputs"-->
<!--        android:padding="4dp"-->
<!--        android:drawableStart="@drawable/email"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginLeft="17dp"-->
<!--        android:layout_marginRight="17dp"-->

<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/register_password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/register_email"-->
<!--        android:hint="Password..."-->
<!--        android:inputType="textPassword"-->
<!--        android:background="@drawable/inputs"-->
<!--        android:padding="4dp"-->
<!--        android:drawableStart="@drawable/password"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginLeft="17dp"-->
<!--        android:layout_marginRight="17dp"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/register_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/register_password"-->
<!--        android:padding="4dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginLeft="19dp"-->
<!--        android:layout_marginRight="19dp"-->
<!--        android:text="Create Account"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="25sp"-->
<!--        android:textColor="@android:color/background_light"-->
<!--        android:background="@drawable/buttons"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/already_have_account_link"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_below="@+id/register_button"-->
<!--        android:text="Already have an account ?"-->
<!--        android:textAlignment="center"-->
<!--        android:layout_marginTop="2dp"-->
<!--        android:layout_marginLeft="15dp"-->
<!--        android:layout_marginRight="23dp"-->
<!--        android:textSize="17dp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/colorPrimaryDark"-->

<!--        />-->

<!--</RelativeLayout>-->