<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.example.chatterbox.LoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


            <ImageView
                android:id="@+id/ivSignIn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="Sign in text on registration activity"
                android:src="@drawable/sign_in" />


            <AutoCompleteTextView
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/emailReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isModerator"
                    android:text="Is Moderator"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/forget_password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black" />


            </LinearLayout>




            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnsignin_gradient"
                android:text="@string/sign_inLog"
                android:textColor="#FFFFFF" />


<!--            <ImageView-->
<!--                android:id="@+id/ivGoogle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="51dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:contentDescription="Social site button"-->
<!--                android:src="@drawable/btn_google" />-->

            <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/google_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:text="Text"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_margin="10dp"-->
            <!--android:textSize="18sp" />-->


            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="@color/black" />


        </LinearLayout>



    </ScrollView>

</RelativeLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".LoginActivity">-->

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ImageView-->
<!--                android:id="@+id/login_image"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:src="@drawable/login_photo"-->
<!--                android:layout_alignParentTop="true"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:scaleType="fitCenter"-->
<!--                />-->

<!--            <EditText-->
<!--                android:id="@+id/login_email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/login_image"-->
<!--                android:hint="Email..."-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:background="@drawable/inputs"-->
<!--                android:padding="4dp"-->
<!--                android:drawableStart="@drawable/email"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:layout_marginLeft="17dp"-->
<!--                android:layout_marginRight="17dp"-->

<!--                />-->

<!--            <EditText-->
<!--                android:id="@+id/login_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/login_email"-->
<!--                android:hint="Password..."-->
<!--                android:inputType="textPassword"-->
<!--                android:background="@drawable/inputs"-->
<!--                android:padding="4dp"-->
<!--                android:drawableStart="@drawable/password"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:layout_marginLeft="17dp"-->
<!--                android:layout_marginRight="17dp"-->
<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/login_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/forget_password_link"-->
<!--                android:padding="4dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginLeft="19dp"-->
<!--                android:layout_marginRight="19dp"-->
<!--                android:text="Login"-->
<!--                android:textAllCaps="false"-->
<!--                android:textSize="25sp"-->
<!--                android:textColor="@android:color/background_light"-->
<!--                android:background="@drawable/buttons"-->
<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/forget_password_link"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_below="@+id/login_password"-->
<!--                android:text="Forgot Password?"-->
<!--                android:textAlignment="textEnd"-->
<!--                android:layout_marginTop="2dp"-->
<!--                android:layout_marginLeft="15dp"-->
<!--                android:layout_marginRight="23dp"-->
<!--                android:textSize="17dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/colorPrimaryDark"-->

<!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/need_new_account_link"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_below="@+id/login_button"-->
<!--                android:text="Need New Account?"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_marginTop="2dp"-->
<!--                android:layout_marginLeft="15dp"-->
<!--                android:layout_marginRight="23dp"-->
<!--                android:textSize="17dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/colorPrimaryDark"-->

<!--                />-->


<!--            <TextView-->
<!--                android:id="@+id/login_using"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_below="@+id/need_new_account_link"-->
<!--                android:text="or Login Using Your"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginLeft="15dp"-->
<!--                android:layout_marginRight="23dp"-->
<!--                android:textSize="17dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/colorPrimaryDark"-->

<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/phone_login_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/login_using"-->
<!--                android:padding="4dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginLeft="19dp"-->
<!--                android:layout_marginRight="19dp"-->
<!--                android:text="Phone"-->
<!--                android:textAllCaps="false"-->
<!--                android:textSize="14dp"-->
<!--                android:textColor="@android:color/background_light"-->
<!--                android:background="@drawable/buttons"-->
<!--                android:drawableStart="@drawable/phone"-->
<!--                />-->


<!--        </RelativeLayout>-->
<!--    </ScrollView>-->
<!--</RelativeLayout>-->